[gd_scene load_steps=2 format=3 uid="uid://bmba88r1fr0wo"]

[ext_resource type="Script" uid="uid://cuxqb5at31cyh" path="res://menus/main_menu.gd" id="1_8gy84"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8gy84")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -90.0
offset_right = 160.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Host Game"

[node name="AddressEntry" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "localhost"
alignment = 1

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Join Game"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Exit"

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
